<resources>
    <string name="app_name">TodoList</string>
    <string name="done">Done</string>
    <string name="image">image</string>
    <string name="todo_list">Todo List</string>
    <string name="task_list">Task List</string>
    <string name="new_task">New Task</string>
    <string name="done_list">Done List</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update_task">Update Task</string>
    <string name="update">Update</string>
    <string name="move_to_task_list">Move To Task List</string>
    <string name="theme_color">Theme Color</string>
    <string name="close_overlay">Close Overlay</string>
    <string name="overlay">Overlay</string>
    <string name="show_task_list">Task Listesini Göster</string>
    <string name="foreground_service_notification">Foreground service notification</string>
    <string name="active">saniyedir aktif</string>
</resources>